--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
     "react-router-hash-link": "^1.2.1",
-    "reactstrap": "^7.0.2"
+    "react-slick": "^0.23.2",
+    "reactstrap": "^7.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby"
