--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
+    "google-map-react": "^1.1.2",
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
