--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "react-alice-carousel": "^1.13.1"
   },
   "repository": {
     "type": "git",
