--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "bootstrap": "^4.0.0-beta.2",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.76",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "google-map-react": "^1.1.2",
@@ -28,7 +30,8 @@
     "react-router-hash-link": "^1.2.1",
     "react-slick": "^0.23.2",
     "reactstrap": "^7.0.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
