--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
+    "pure-react-carousel": "^1.20.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
