--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
+    "react-multi-carousel": "^1.4.3",
     "react-router-hash-link": "^1.2.1",
     "react-slick": "^0.23.2",
     "reactstrap": "^7.0.2",
