--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.4.1",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
